volexc/tests/ui/mapkey_struct_with_map.typescript.out
Error: invalid map key type: structs cannot be used as map keys in TypeScript
    ╭─[mapkey_struct_with_map.vol:11:12]
    │
 11 │     data: {Key:string}
    │            ─┬─  
    │             ╰─── struct 'Key' used here
────╯