volexc/tests/ui/mapkey_struct_with_map.vol
// rust:fail
// go:fail
// typescript:fail
// Struct containing map is invalid as map key in all languages
struct Key {
    id: u32
    metadata: {string:string}
}

struct Test {
    data: {Key:string}
}
